--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-463.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 保加利亚-911.6KB/s(Youtube:不良林), server: 213.183.63.217, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-2.95MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-1.57MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-251.1KB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇨🇳 中国-5.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-354.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 波兰-786.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-479.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 波兰-702.3KB/s(Youtube:不良林), server: 217.30.10.63, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 波兰-875.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林), server: 213.183.53.200, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 保加利亚-911.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 波兰-354.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
-      - 波兰-875.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 保加利亚-911.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 波兰-354.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
-      - 波兰-875.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 保加利亚-911.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 波兰-354.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
-      - 波兰-875.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 保加利亚-911.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 波兰-354.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
-      - 波兰-875.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 保加利亚-911.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 波兰-354.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
-      - 波兰-875.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 保加利亚-911.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 波兰-354.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
-      - 波兰-875.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 保加利亚-911.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 波兰-354.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
-      - 波兰-875.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
