--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-911.6KB/s(Youtube:不良林), server: 213.183.63.217, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-2.95MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.57MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 波兰-786.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-479.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-702.3KB/s(Youtube:不良林), server: 217.30.10.63, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林), server: 213.183.53.200, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 波兰-231.6KB/s(Youtube:不良林), server: 217.30.10.66, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-1.83MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 捷克-789.6KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: us.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: us.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-478.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-911.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-702.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 捷克-789.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-911.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-702.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 捷克-789.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-911.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-702.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 捷克-789.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-911.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-702.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 捷克-789.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-911.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-702.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 捷克-789.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-911.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-702.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 捷克-789.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-911.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-702.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 捷克-789.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
