--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-231.6KB/s(Youtube:不良林), server: 217.30.10.66, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
   - {name: 🇳🇱 荷兰-1.83MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 捷克-789.6KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: us.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: us.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-478.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 波兰-231.6KB/s(Youtube:不良林), server: 217.30.10.66, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-1.38MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林), server: 213.183.53.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇳🇱 荷兰-795.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 波兰-2.08MB/s(Youtube:不良林), server: 217.30.10.67, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 波兰-663.7KB/s(Youtube:不良林), server: 217.30.10.66, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 波兰-654.3KB/s(Youtube:不良林), server: 217.30.10.66, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-231.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 捷克-789.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-795.6KB/s(Youtube:不良林)
+      - 波兰-2.08MB/s(Youtube:不良林)
+      - 波兰-663.7KB/s(Youtube:不良林)
+      - 波兰-654.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-231.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 捷克-789.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-795.6KB/s(Youtube:不良林)
+      - 波兰-2.08MB/s(Youtube:不良林)
+      - 波兰-663.7KB/s(Youtube:不良林)
+      - 波兰-654.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-231.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 捷克-789.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-795.6KB/s(Youtube:不良林)
+      - 波兰-2.08MB/s(Youtube:不良林)
+      - 波兰-663.7KB/s(Youtube:不良林)
+      - 波兰-654.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-231.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 捷克-789.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-795.6KB/s(Youtube:不良林)
+      - 波兰-2.08MB/s(Youtube:不良林)
+      - 波兰-663.7KB/s(Youtube:不良林)
+      - 波兰-654.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-231.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 捷克-789.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-795.6KB/s(Youtube:不良林)
+      - 波兰-2.08MB/s(Youtube:不良林)
+      - 波兰-663.7KB/s(Youtube:不良林)
+      - 波兰-654.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-231.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 捷克-789.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-795.6KB/s(Youtube:不良林)
+      - 波兰-2.08MB/s(Youtube:不良林)
+      - 波兰-663.7KB/s(Youtube:不良林)
+      - 波兰-654.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-231.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 捷克-789.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.5KB/s(Youtube:不良林)
+      - 波兰-231.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-795.6KB/s(Youtube:不良林)
+      - 波兰-2.08MB/s(Youtube:不良林)
+      - 波兰-663.7KB/s(Youtube:不良林)
+      - 波兰-654.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
